# Python-fastapi-multiauth-uv

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  QUICKSTART.md  README.md  STRIPE_INTEGRATION_COMPLETE.md  alembic.ini  cli.py  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_missing_indexes.py  20251022_2148-7485bf74d098_fix_quota_timestamps_to_use_timezone_.py  20251022_2209-71158469fe62_fix_dead_letter_timestamps_to_use_.py  20251023_0014-9f3c4e4b41de_add_stripe_billing_models.py
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/dependencies/: __init__.py  auth.py  quota.py  rbac.py
app/api/v1/endpoints/: api_keys.py  audit_logs.py  auth.py  billing.py  dead_letter.py  feature_flags.py  files.py  health.py  invitations.py  notifications.py  organizations.py  quota.py  sessions.py  stripe_webhooks.py  teams.py  totp.py  users.py  webhooks.py  websocket.py
app/core/: config.py  encryption.py  exceptions.py  graceful_shutdown.py  logging_config.py  organization_helpers.py  security.py
app/db/: base.py  session.py
app/middleware/: graceful_shutdown.py  logging.py  rate_limit.py  request_id.py  security.py
app/models/: __init__.py  api_key.py  audit_log.py  billing_event.py  dead_letter.py  feature_flag.py  file.py  invitation.py  invoice.py  notification.py  oauth.py  organization.py  payment_method.py  quota.py  role.py  session.py  subscription.py  subscription_plan.py  team.py  token.py  totp.py  user.py  webhook.py
app/repositories/: base.py  user_repository.py
app/schemas/: api_key.py  audit_log.py  auth.py  billing.py  dead_letter.py  feature_flag.py  file.py  invitation.py  notification.py  organization.py  quota.py  role.py  session.py  team.py  token.py  totp.py  user.py  webhook.py
app/services/: api_key_service.py  audit_log_service.py  auth.py  billing_service.py  cache.py  dead_letter.py  feature_flag.py  invitation_service.py  notification_service.py  openai_service.py  organization.py  quota.py  rbac.py  session.py  storage.py  stripe_service.py  team.py  totp.py  user.py  webhook.py  websocket_manager.py
app/tasks/: billing.py  celery_app.py  email.py  pypi_check.py  task_utils.py  webhook.py
app/utils/: filtering.py  pagination.py
docs/: ADDITIONAL_SECURITY_FIXES.md  API_EXAMPLES.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODEX_REVIEW_STATUS.md  COMPLETE_TEST_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_TEST_GUIDE.md  CONFIGURABLE_FILE_UPLOADS.md  CRITICAL_ARCHITECTURAL_FIXES.md  DEPENDENCY_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_COMPOSE.md  DOCKER_DEV.md  DOCKER_HOTRELOAD_SETUP.md  FILE_UPLOAD_CONFIG.md  FINAL_SESSION_SUMMARY.md  FIXES_APPLIED.md  FRAMEWORK_REVIEW.md  GLOBAL_ADMIN.md  HUMAN_IN_LOOP_TESTING_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LATEST_FIXES_SUMMARY.md  LINTING_STATUS.md  LOGGING_UPGRADE.md  ORG_FILE_STORAGE.md  PRODUCTION_READY.md  PROJECT_AUDIT.md  QUICKSTART.md  SECURITY.md  SECURITY_FIXES.md  SESSION_3_SUMMARY.md  SINGLE_ORG_MEMBERSHIP.md  STRIPE_IMPLEMENTATION_SUMMARY.md  STRIPE_PLAN.md  STRIPE_SETUP.md  TESTING.md  TESTING_AND_LINTING_REPORT.md  TEST_COMPLETION_STATUS.md  (+3 more)
helm/saas-backend/: Chart.yaml  README.md  values.yaml
helm/saas-backend/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: README.md  cert-issuer.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
migrations/: encrypt_totp_secrets_migration.sql  hash_invitation_tokens_migration.sql  hash_tokens_migration.sql  lowercase_emails_migration.sql
scripts/: check-deps.py  init_db.py  init_db.sh  seed_subscription_plans.py  start-traefik.sh  start.sh  test-hot-reload.sh
tests/: __init__.py  conftest.py  test_oauth_csrf.py
tests/e2e/: README.md  conftest.py  test_api_keys.py  test_audit_logs.py  test_auth_flow.py  test_billing.py  test_feature_flags.py  test_files_and_storage.py  test_health_and_monitoring.py  test_invitations.py  test_mfa_login_flow.py  test_notifications.py  test_organizations.py  test_session_integration.py  test_session_management.py  test_sessions_and_webhooks.py  test_teams.py  test_totp.py  test_users.py  test_websocket.py
tests/integration/: test_auth.py  test_celery_tasks.py  test_email.py  test_keycloak.py  test_oauth_providers.py  test_stripe_webhooks.py  test_webhook_delivery.py
tests/manual/: README.md  interactive_email_test.py  interactive_oauth_test.py
tests/regression/: test_file_listings_boolean_fix.py  test_session_refresh_token_fix.py  test_stripe_webhook_idempotency.py  test_totp_backup_codes_fix.py  test_webhook_secret_masking.py
tests/unit/: test_billing_service.py  test_mime_verification.py  test_quota_service.py  test_security.py  test_token_security.py
traefik/: .env.example  README.md  traefik.yml
traefik/dynamic/: middleware.yml
